fixed create dcdd user

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=root
-POSTGRES_HOST=10.10.10.236
+POSTGRES_USER=educare
+POSTGRES_PASSWORD=educare
+POSTGRES_HOST=47.128.247.50
 POSTGRES_PORT=5432
 POSTGRES_DB=educare_dcdd_user_identity_db
+
+USER_SERVICE_API = "http://localhost:8105/graphql"
+MEMBERSHIPAPI  = "http://Localhost:8106/graphql"
